Add new declarations.
