# storage/api-docs/api-docs.json
@@ -12,26 +12,11 @@
     },
     "servers": [
         {
-            "url": "http://127.0.0.1:8000/api/v1"
+            "url": "http://127.0.0.1:8000/"
         }
     ],
     "paths": {
-        "/greet": {
-            "get": {
-                "tags": [
-                    "greeting1"
-                ],
-                "summary": "Returns a Sample API response",
-                "description": "A sample greeting to test out the API",
-                "operationId": "sampleFunctionWithDoc",
-                "responses": {
-                    "default": {
-                        "description": "successful operation"
-                    }
-                }
-            }
-        },
-        "/login": {
+        "/api/v1/login": {
             "post": {
                 "tags": [
                     "Login1"
@@ -83,7 +68,7 @@
                 }
             }
         },
-        "/companies": {
+        "/api/v1/companies": {
             "get": {
                 "tags": [
                     "Companies"
@@ -180,7 +165,7 @@
                 }
             }
         },
-        "/companies/{id}": {
+        "/api/v1/companies/{id}": {
             "get": {
                 "tags": [
                     "Companies"
@@ -266,11 +251,121 @@
                 ]
             }
         },
-        "/posts": {
-            "get": {
+        "/api/v1/companies/{company}": {
+            "delete": {
+                "tags": [
+                    "Companies"
+                ],
+                "description": "deletes a single company based on the ID supplied",
+                "operationId": "destroy",
+                "parameters": [
+                    {
+                        "name": "company",
+                        "in": "path",
+                        "description": "ID of company to delete",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "404": {
+                        "description": "Company not found"
+                    },
+                    "204": {
+                        "description": "company deleted"
+                    },
+                    "200": {
+                        "description": "success"
+                    },
+                    "default": {
+                        "description": "unexpected error"
+                    }
+                }
+            },
+            "patch": {
+                "tags": [
+                    "Companies"
+                ],
+                "summary": "Update a company.",
+                "description": "A sample ... to test out the API",
+                "operationId": "update",
+                "parameters": [
+                    {
+                        "name": "company",
+                        "in": "path",
+                        "description": "Company id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "company": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object",
+                                "example": {
+                                    "name": "Jessica Smith"
+                                }
+                            }
+                        }
+                    }
+                },
                 "responses": {
                     "200": {
-                        "description": "An example resource PostsController"
+                        "description": "Success a company update.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "name": {
+                                            "description": "Company name.",
+                                            "type": "string"
+                                        },
+                                        "updated_at": {
+                                            "description": "Date of update.",
+                                            "type": "string"
+                                        },
+                                        "created_at": {
+                                            "description": "Date of create.",
+                                            "type": "string"
+                                        },
+                                        "Id": {
+                                            "description": "Record ID.",
+                                            "type": "integer"
+                                        }
+                                    },
+                                    "type": "object",
+                                    "example": {
+                                        "name": "Jessica Smith",
+                                        "updated_at": "2019-11-21 16:41:42",
+                                        "created_at": "2019-11-21 16:41:42",
+                                        "id": 7
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "400": {
+                        "description": "Invalid ID supplied"
+                    },
+                    "404": {
+                        "description": "Company not found"
+                    },
+                    "405": {
+                        "description": "Validation exception"
                     }
                 }
             }
